// `protoc --gofast_out=. *.proto`
syntax = "proto3";
package pb;

// register on data chain
// key: 'NetInfoKey'/RoleID; 
message NetInfo {
    enum NetType {
        Unknown = 0;
        P2PAddr = 1;
    }

	NetType type = 1;
    bytes netID = 2;   // id to connect
	bytes addr = 3;    // multi net addrsï¼Ÿ
}

// key: 'RoleInfoKey'/'RoleType'/RoleID 
message RoleInfo {
    enum Type {
        Unknown = 0; 
        User = 1;
        Provider = 2;
        Keeper = 3;
    }

    Type type = 1;  
    uint64 roleID = 2;
    uint64 groupID = 3;
    bytes chainVerifyKey = 4;      // address/pubkey on chain
	bytes blsVerifyKey = 5;    
    bytes extra = 6;               // pdp verify key      
}
